-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 11, 17, 21, 22, 23
-
Component/s: hotspot
-
b26
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8340842 | 21.0.6-oracle | Calvin Cheung | P2 | Closed | Fixed | b01 |
| JDK-8334292 | 21.0.5 | Liang Mao | P2 | Resolved | Fixed | b01 |
| JDK-8344463 | 17.0.14 | Martin Doerr | P2 | Resolved | Fixed | b04 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S14954/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/7a61988f-fa10-4eb7-a361-4e67d3c7fac2/runs/b79ea7ff-61e6-4a2b-8e07-0f9cd848e313/workspace/open/src/hotspot/share/prims/jniCheck.cpp:2300), pid=744529, tid=744531
# assert(*lastPtr != 0) failed: Mismatched JNINativeInterface tables, check for new entries
#
# JRE version: (23.0+25) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 23-ea+25-2026, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xfd365e] jni_functions_check()+0x6e
#
# Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S14959/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0f78171-2fce-4be3-b9e0-a5003572c751/runs/7329f10c-4ae2-4b67-bfc0-988ebd7560e2/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/scratch/4/core.744529)
#
#
--------------- S U M M A R Y ------------
Command Line: -Denv.class.path=/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S14959/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0f78171-2fce-4be3-b9e0-a5003572c751/runs/7329f10c-4ae2-4b67-bfc0-988ebd7560e2/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/classes/1/serviceability/sa/ClhsdbJhisto.d:/opt/mach5/mesos/work_dir/jib-master/install/jdk-23+25-2026/src.full/open/test/hotspot/jtreg/serviceability/sa:/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S14959/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0f78171-2fce-4be3-b9e0-a5003572c751/runs/7329f10c-4ae2-4b67-bfc0-988ebd7560e2/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/classes/1/test/lib:/opt/mach5/mesos/work_dir/jib-master/install/jdk-23+25-2026/src.full/open/test/lib:/opt/mach5/mesos/work_dir/jib-master/install/jtreg/7.3.1/1/bundles/jtreg-7.3.1+1.zip/jtreg/lib/jtreg.jar -Dapplication.home=/opt/mach5/mesos/work_dir/jib-master/install/jdk-23+25-2026/linux-x64-debug.jdk/jdk-23/fastdebug -Xms8m -XX:MaxRAMPercentage=4.16667 -Dtest.boot.jdk=/opt/mach5/mesos/work_dir/jib-master/install/jdk/22/36/bundles/linux-x64/jdk-22_linux-x64_bin.tar.gz/jdk-22 -Djava.io.tmpdir=/opt/mach5/mesos/work_dir/slaves/a4a7850a-7c35-410a-b879-d77fbb2f6087-S14959/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/e0f78171-2fce-4be3-b9e0-a5003572c751/runs/7329f10c-4ae2-4b67-bfc0-988ebd7560e2/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1/tmp -Xcheck:jni -Djdk.module.main=jdk.hotspot.agent jdk.hotspot.agent/sun.jvm.hotspot.SALauncher clhsdb --pid=744447
Host: AMD EPYC 7J13 64-Core Processor, 12 cores, 23G, Oracle Linux Server release 8.9
Time: Fri May 24 22:37:02 2024 UTC elapsed time: 0.005108 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread is native thread
Stack: [0x00007fc201cad000,0x00007fc201dae000], sp=0x00007fc201dacbb0, free space=1022k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xfd365e] jni_functions_check()+0x6e (jniCheck.cpp:2300)
V [libjvm.so+0xea4500] JavaThread::JavaThread()+0x2e0 (javaThread.cpp:508)
V [libjvm.so+0x17d7e06] Threads::create_vm(JavaVMInitArgs*, bool*)+0x236 (threads.cpp:527)
V [libjvm.so+0xf8a004] JNI_CreateJavaVM+0x54 (jni.cpp:3581)
C [libjli.so+0x3ccf] JavaMain+0x8f (java.c:1550)
C [libjli.so+0x7cb9] ThreadJavaMain+0x9 (java_md.c:653)
- backported by
-
JDK-8334292 Crash: assert(*lastPtr != 0) failed: Mismatched JNINativeInterface tables, check for new entries
-
- Resolved
-
-
JDK-8344463 Crash: assert(*lastPtr != 0) failed: Mismatched JNINativeInterface tables, check for new entries
-
- Resolved
-
-
JDK-8340842 Crash: assert(*lastPtr != 0) failed: Mismatched JNINativeInterface tables, check for new entries
-
- Closed
-
- links to
-
Commit
openjdk/jdk21u-dev/90699828
-
Commit
openjdk/jdk/8338946a
-
Commit(master)
openjdk/jdk17u-dev/d0949c82
-
Review
openjdk/jdk21u-dev/696
-
Review
openjdk/jdk/19491
-
Review(master)
openjdk/jdk17u-dev/3041
-
Review(master)
openjdk/jdk22u/247